...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccaunt">

        <!-- Create Login -->
        <com.rey.material.widget.ProgressView
        android:id="@+id/create_account_progress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_width="@dimen/progressview"
        android:layout_height="@dimen/progressview"
        app:v_styleId="@array/pv_circular_in_colors"/>
...
                    app:counterEnabled="false"
                    app:counterMaxLength="19"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride">

                        <EditText
                        android:id="@+id/login"
                        android:maxLength="@integer/etittext_maxlength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
...
                    app:counterEnabled="false"
                    app:counterMaxLength="19"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride">

                        <EditText
                        android:id="@+id/name"
                        android:maxLength="@integer/etittext_maxlength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_name"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
...
                    app:counterEnabled="false"
                    app:counterMaxLength="19"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride">

                        <EditText
                        android:id="@+id/lastname"
                        android:maxLength="@integer/etittext_maxlength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_Lastname"
                        android:inputType="text"
                        android:imeOptions="actionUnspecified"
...
                    app:counterEnabled="false"
                    app:counterMaxLength="19"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride">

                        <EditText
                        android:id="@+id/email2"
                        android:maxLength="@integer/etittext_maxlength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
...
                    app:counterEnabled="false"
                    app:counterMaxLength="29"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride">

                        <EditText
                        android:id="@+id/password"
                        android:maxLength="@integer/passwordtext_maxlength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
...
                    app:counterEnabled="false"
                    app:counterMaxLength="29"
                    app:counterTextAppearance="@style/counterText"
                    app:counterOverflowTextAppearance="@style/counterOverride">

                        <EditText
                        android:id="@+id/password2"
                        android:maxLength="@integer/passwordtext_maxlength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password2"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
...
                        android:maxLines="1"
                        android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>


                    <com.rey.material.widget.Button
                    android:id="@+id/create_acc_button"
                    app:rd_enable="true"
                    style="?android:textAppearanceSmall"
                    app:v_styleId="@array/button_raise_wave"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_button"
                    android:layout_marginTop="16dp"
...
